fixed overflow scroll and download button

--- a/app/assets/stylesheets/components/_artist_info.scss
+++ b/app/assets/stylesheets/components/_artist_info.scss
@@ -85,6 +85,8 @@ img {
 }
 
 .songindex {
+  height: 800px;
+  overflow: scroll;
   padding: 0px;
   border: solid black 2px;
   width: inherit;
