--- a/app/assets/stylesheets/components/_home_page.scss
+++ b/app/assets/stylesheets/components/_home_page.scss
@@ -27,7 +27,10 @@
     width: 270px;
     font-size: 16px;
     font-family: Roboto;
+    border-width: 2px;
 }
+
+
 
 .dropdown-content {
     display: block;
